# herman-db

./: README.md  alembic.ini  pyproject.toml
docs/: app-integration.md  schema-governance.md  shared_schema_inventory_2026-05-04.csv  shared_schema_inventory_2026-05-04.md  shared_schema_inventory_2026-05-05.csv  shared_schema_inventory_2026-05-05.md  table-lifecycle.md
migrations/: env.py
migrations/versions/: 20260504_0006_baseline_live_shared_schema.py  20260504_0007_password_reset_tokens_cleanup.py  20260504_0008_invitation_admin_cleanup.py  20260504_0009_profile_and_derived_cleanup.py  20260505_0010_user_invitations_current_state_cleanup.py  20260505_0011_profile_and_derived_lifecycle_cleanup.py  20260505_0012_user_tenant_authority_cleanup.py  20260505_0013_admin_identity_and_tenant_llm_cleanup.py  20260505_0014_membership_profile_and_reseller_defaults_cleanup.py  20260505_0015_rag_quota_and_knowledge.py  20260506_0016_rag_schema_contract_repairs.py
ownership/: fields.yml  tables.yml
schema/: live_shared_schema.sql
