[project]
name = "herman-db"
version = "0.1.0"
description = "Canonical schema project for the shared Herman database"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.1,<4",
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
]

[tool.alembic]
script_location = "migrations"
